feat: archivo script conectado a html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <title>HTML Site Demo</title>
     <!-- Hoja de estilo personalizada-->
     <link rel="stylesheet" href="./assets/styles/styl.css">
+  
   </head>
   <body>
+
     <h1>Hola Mundo</h1>
     <p>Bienvenido a mi primera aplicación</p>
     <p>Esta página contiene:</p>
@@ -14,5 +16,6 @@
         <li>JavaScript</li>
     </ul>
     <button>Dime tu nombre</button>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
